--- a/Microsoft.Toolkit.Uwp.UI.Controls/InAppNotification/InAppNotification.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/InAppNotification/InAppNotification.xaml
@@ -22,6 +22,9 @@
         <Setter Property="Margin" Value="20 0" />
         <Setter Property="Padding" Value="25 10" />
         <Setter Property="MaxWidth" Value="1200" />
+        <Setter Property="AnimationDuration" Value="100" />
+        <Setter Property="VerticalOffset" Value="100" />
+        <Setter Property="HorizontalOffset" Value="0" />
         <Setter Property="Template" Value="{StaticResource MSEdgeNotificationTemplate}" />
     </Style>
 </ResourceDictionary>
