--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
@@ -15,14 +15,21 @@
                                Foreground="White"
                                Background="{Binding Path=BackgroundExpander1.Value, Mode=TwoWay}"
                                IsExpanded="{Binding Path=IsExpanded1.Value, Mode=TwoWay}"
-                               ExpandDirection="{Binding Path=ExpandDirection1.Value, Mode=TwoWay}">
+                               ExpandDirection="{Binding Path=ExpandDirection1.Value, Mode=TwoWay}"
+                               DisplayMode="{Binding Path=DisplayMode1.Value, Mode=TwoWay}">
                 <Grid Height="250">
                     <TextBlock HorizontalAlignment="Center" 
-                               TextWrapping="Wrap" 
-                               Text="This is the content"
-                               VerticalAlignment="Center"
-                               Style="{StaticResource HeaderTextBlockStyle}" />
+                                TextWrapping="Wrap" 
+                                Text="This is the content"
+                                VerticalAlignment="Center"
+                                Style="{StaticResource HeaderTextBlockStyle}" />
                 </Grid>
+
+                <controls:Expander.ContentOverlay>
+                    <Grid Background="Red">
+                        <TextBlock Text="Hello" />
+                    </Grid>
+                </controls:Expander.ContentOverlay>
             </controls:Expander>
 
             <controls:Expander x:Name="Expander2" VerticalAlignment="Top" Margin="0" 
@@ -31,13 +38,14 @@
                                Foreground="White"
                                Background="{Binding Path=BackgroundExpander2.Value, Mode=TwoWay}"
                                IsExpanded="{Binding Path=IsExpanded2.Value, Mode=TwoWay}"
-                               ExpandDirection="{Binding Path=ExpandDirection2.Value, Mode=TwoWay}">
+                               ExpandDirection="{Binding Path=ExpandDirection2.Value, Mode=TwoWay}"
+                               DisplayMode="{Binding Path=DisplayMode2.Value, Mode=TwoWay}">
                 <Grid Height="250">
                     <TextBlock HorizontalAlignment="Center" 
-                               TextWrapping="Wrap" 
-                               Text="This is the content" 
-                               VerticalAlignment="Center" 
-                               Style="{StaticResource HeaderTextBlockStyle}" />
+                            TextWrapping="Wrap" 
+                            Text="This is the content" 
+                            VerticalAlignment="Center" 
+                            Style="{StaticResource HeaderTextBlockStyle}" />
                 </Grid>
             </controls:Expander>
         </StackPanel>
