--- a/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
@@ -336,15 +336,16 @@
                                         <Setter Target="PART_RootGrid.Background" Value="Transparent" />
                                     </VisualState.Setters>
                                 </VisualState>
+                                <VisualState x:Name="OverlayHidden">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_MainContent.Visibility" Value="Visible" />
+                                        <Setter Target="PART_MainContent.Opacity" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.Visibility" Value="Visible" />
+                                    </VisualState.Setters>
+                                </VisualState>
                                 <VisualState x:Name="OverlayVisible">
                                     <VisualState.Setters>
                                         <Setter Target="PART_MainContent.Visibility" Value="Visible" />
-                                    </VisualState.Setters>
-                                </VisualState>
-                                <VisualState x:Name="OverlayHidden">
-                                    <VisualState.Setters>
-                                        <Setter Target="PART_MainContent" Value="Visible" />
-                                        <Setter Target="PART_ContentOverlay" Value="Visible" />
                                     </VisualState.Setters>
                                 </VisualState>
                             </VisualStateGroup>
@@ -361,6 +362,11 @@
                                         <Setter Target="PART_MainContent.(Grid.RowSpan)" Value="2" />
                                         <Setter Target="PART_MainContent.(Grid.Column)" Value="1" />
                                         <Setter Target="PART_MainContent.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="PART_ContentOverlay.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.Column)" Value="1" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.ColumnSpan)" Value="1" />
 
                                         <Setter Target="RotateLayoutTransform.Angle" Value="-90" />
                                     </VisualState.Setters>
@@ -380,6 +386,11 @@
                                         <Setter Target="PART_MainContent.(Grid.Column)" Value="0" />
                                         <Setter Target="PART_MainContent.(Grid.ColumnSpan)" Value="1" />
 
+                                        <Setter Target="PART_ContentOverlay.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.ColumnSpan)" Value="1" />
+
                                         <Setter Target="RotateLayoutTransform.Angle" Value="-90" />
 
                                         <Setter Target="ColumnOne.Width" Value="*" />
@@ -398,6 +409,11 @@
                                         <Setter Target="PART_MainContent.(Grid.RowSpan)" Value="1" />
                                         <Setter Target="PART_MainContent.(Grid.Column)" Value="0" />
                                         <Setter Target="PART_MainContent.(Grid.ColumnSpan)" Value="2" />
+
+                                        <Setter Target="PART_ContentOverlay.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.RowSpan)" Value="1" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.ColumnSpan)" Value="2" />
 
                                         <Setter Target="RotateLayoutTransform.Angle" Value="0" />
                                     </VisualState.Setters>
@@ -435,21 +451,23 @@
                                               IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" />
                             </controls:LayoutTransformControl>
 
+                            <ContentControl Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2"
+                                            x:Name="PART_ContentOverlay"
+                                            Content="{TemplateBinding ContentOverlay}"
+                                            HorizontalAlignment="Stretch"
+                                            HorizontalContentAlignment="Stretch"
+                                            VerticalAlignment="Stretch"
+                                            VerticalContentAlignment="Stretch"
+                                            Visibility="Collapsed" />
+
                             <ContentPresenter Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2"
                                               x:Name="PART_MainContent"
                                               Background="{TemplateBinding Background}"
                                               HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                               HorizontalContentAlignment="Stretch"
                                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                              VerticalContentAlignment="Stretch"
                                               Visibility="Collapsed" />
-
-                            <ContentControl Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="2"
-                                            x:Name="PART_ContentOverlay"
-                                            Canvas.ZIndex="10"
-                                            Content="{TemplateBinding ContentOverlay}"
-                                            HorizontalAlignment="Stretch"
-                                            VerticalAlignment="Stretch"
-                                            Visibility="Collapsed" />
                         </Grid>
                     </Grid>
                 </ControlTemplate>
