Fixing overlap issue

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/DockPanel/DockPanelPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/DockPanel/DockPanelPage.xaml
@@ -7,30 +7,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
-    <controls:DockPanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <StackPanel Height="100"
-                    controls:DockPanel.Dock="Top"
-                    Background="Green" />
-        <StackPanel Width="100"
-                    controls:DockPanel.Dock="Left"
-                    Background="Red" />
-        <StackPanel Height="100"
-                    controls:DockPanel.Dock="Bottom"
-                    Background="Yellow" />
-        <StackPanel Width="100"
-                    controls:DockPanel.Dock="Right"
-                    Background="Gray" />
 
-        <StackPanel Width="100"
-                    controls:DockPanel.Dock="Right"
-                    Background="Red" />
-
-        <StackPanel Height="100"
-                    controls:DockPanel.Dock="Top"
-                    Background="AntiqueWhite" />
-
-        <StackPanel controls:DockPanel.Dock="Top"
-                    Background="Black" />
-
-    </controls:DockPanel>
+    <!--  Shallow Copy  -->
+    <Grid Visibility="Collapsed">
+        <controls:DockPanel />
+    </Grid>
 </Page>
