--- a/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
@@ -325,57 +325,11 @@
                 <ControlTemplate TargetType="controls:Expander">
                     <Grid>
                         <VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup x:Name="ExpandedStates">
-                                <VisualState x:Name="Expanded">
+                            <VisualStateGroup x:Name="DisplayModeAndDirectionStates">
+                                <VisualState x:Name="VisibleLeft">
                                     <VisualState.Setters>
                                         <Setter Target="PART_MainContent.Visibility" Value="Visible" />
-                                    </VisualState.Setters>
-                                </VisualState>
-                                <VisualState x:Name="Collapsed">
-                                    <VisualState.Setters>
-                                        <Setter Target="PART_RootGrid.Background" Value="Transparent" />
-                                    </VisualState.Setters>
-                                </VisualState>
-                                <VisualState x:Name="OverlayHidden">
-                                    <VisualState.Setters>
-                                        <Setter Target="PART_MainContent.Visibility" Value="Visible" />
-                                        <Setter Target="PART_MainContent.Opacity" Value="0" />
-                                        <Setter Target="PART_ContentOverlay.Visibility" Value="Visible" />
-                                    </VisualState.Setters>
-                                </VisualState>
-                                <VisualState x:Name="OverlayVisible">
-                                    <VisualState.Setters>
-                                        <Setter Target="PART_MainContent.Visibility" Value="Visible" />
-                                    </VisualState.Setters>
-                                </VisualState>
-                            </VisualStateGroup>
 
-                            <VisualStateGroup x:Name="ExpandDirectionStates">
-                                <VisualState x:Name="RightDirection">
-                                    <VisualState.Setters>
-                                        <Setter Target="PART_LayoutTransformer.(Grid.Row)" Value="0" />
-                                        <Setter Target="PART_LayoutTransformer.(Grid.RowSpan)" Value="2" />
-                                        <Setter Target="PART_LayoutTransformer.(Grid.Column)" Value="0" />
-                                        <Setter Target="PART_LayoutTransformer.(Grid.ColumnSpan)" Value="1" />
-
-                                        <Setter Target="PART_MainContent.(Grid.Row)" Value="0" />
-                                        <Setter Target="PART_MainContent.(Grid.RowSpan)" Value="2" />
-                                        <Setter Target="PART_MainContent.(Grid.Column)" Value="1" />
-                                        <Setter Target="PART_MainContent.(Grid.ColumnSpan)" Value="1" />
-
-                                        <Setter Target="PART_ContentOverlay.(Grid.Row)" Value="0" />
-                                        <Setter Target="PART_ContentOverlay.(Grid.RowSpan)" Value="2" />
-                                        <Setter Target="PART_ContentOverlay.(Grid.Column)" Value="1" />
-                                        <Setter Target="PART_ContentOverlay.(Grid.ColumnSpan)" Value="1" />
-
-                                        <Setter Target="RotateLayoutTransform.Angle" Value="-90" />
-                                    </VisualState.Setters>
-                                </VisualState>
-
-                                <VisualState x:Name="DownDirection" />
-
-                                <VisualState x:Name="LeftDirection">
-                                    <VisualState.Setters>
                                         <Setter Target="PART_LayoutTransformer.(Grid.Row)" Value="0" />
                                         <Setter Target="PART_LayoutTransformer.(Grid.RowSpan)" Value="2" />
                                         <Setter Target="PART_LayoutTransformer.(Grid.Column)" Value="1" />
@@ -397,9 +351,195 @@
                                         <Setter Target="ColumnTwo.Width" Value="Auto" />
                                     </VisualState.Setters>
                                 </VisualState>
-
-                                <VisualState x:Name="UpDirection">
+                                <VisualState x:Name="VisibleDown">
                                     <VisualState.Setters>
+                                        <Setter Target="PART_MainContent.Visibility" Value="Visible" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="VisibleRight">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_MainContent.Visibility" Value="Visible" />
+
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="PART_MainContent.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_MainContent.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_MainContent.(Grid.Column)" Value="1" />
+                                        <Setter Target="PART_MainContent.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="PART_ContentOverlay.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.Column)" Value="1" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="RotateLayoutTransform.Angle" Value="-90" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="VisibleUp">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_MainContent.Visibility" Value="Visible" />
+
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Row)" Value="1" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.RowSpan)" Value="1" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.ColumnSpan)" Value="2" />
+
+                                        <Setter Target="PART_MainContent.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_MainContent.(Grid.RowSpan)" Value="1" />
+                                        <Setter Target="PART_MainContent.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_MainContent.(Grid.ColumnSpan)" Value="2" />
+
+                                        <Setter Target="PART_ContentOverlay.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.RowSpan)" Value="1" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.ColumnSpan)" Value="2" />
+
+                                        <Setter Target="RotateLayoutTransform.Angle" Value="0" />
+                                    </VisualState.Setters>
+                                </VisualState>
+
+                                <VisualState x:Name="CollapsedLeft">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_RootGrid.Background" Value="Transparent" />
+
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Column)" Value="1" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="PART_MainContent.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_MainContent.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_MainContent.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_MainContent.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="PART_ContentOverlay.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="RotateLayoutTransform.Angle" Value="-90" />
+
+                                        <Setter Target="ColumnOne.Width" Value="*" />
+                                        <Setter Target="ColumnTwo.Width" Value="Auto" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="CollapsedDown">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_RootGrid.Background" Value="Transparent" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="CollapsedRight">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_RootGrid.Background" Value="Transparent" />
+
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="PART_MainContent.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_MainContent.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_MainContent.(Grid.Column)" Value="1" />
+                                        <Setter Target="PART_MainContent.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="PART_ContentOverlay.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.Column)" Value="1" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="RotateLayoutTransform.Angle" Value="-90" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="CollapsedUp">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_RootGrid.Background" Value="Transparent" />
+
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Row)" Value="1" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.RowSpan)" Value="1" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.ColumnSpan)" Value="2" />
+
+                                        <Setter Target="PART_MainContent.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_MainContent.(Grid.RowSpan)" Value="1" />
+                                        <Setter Target="PART_MainContent.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_MainContent.(Grid.ColumnSpan)" Value="2" />
+
+                                        <Setter Target="PART_ContentOverlay.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.RowSpan)" Value="1" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.ColumnSpan)" Value="2" />
+
+                                        <Setter Target="RotateLayoutTransform.Angle" Value="0" />
+                                    </VisualState.Setters>
+                                </VisualState>
+
+                                <VisualState x:Name="OverlayLeft">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_MainContent.Visibility" Value="Visible" />
+                                        <Setter Target="PART_MainContent.Opacity" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.Visibility" Value="Visible" />
+
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Column)" Value="1" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="PART_MainContent.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_MainContent.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_MainContent.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_MainContent.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="PART_ContentOverlay.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="RotateLayoutTransform.Angle" Value="-90" />
+
+                                        <Setter Target="ColumnOne.Width" Value="*" />
+                                        <Setter Target="ColumnTwo.Width" Value="Auto" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="OverlayDown">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_MainContent.Visibility" Value="Visible" />
+                                        <Setter Target="PART_MainContent.Opacity" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.Visibility" Value="Visible" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="OverlayRight">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_MainContent.Visibility" Value="Visible" />
+                                        <Setter Target="PART_MainContent.Opacity" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.Visibility" Value="Visible" />
+
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.Column)" Value="0" />
+                                        <Setter Target="PART_LayoutTransformer.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="PART_MainContent.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_MainContent.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_MainContent.(Grid.Column)" Value="1" />
+                                        <Setter Target="PART_MainContent.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="PART_ContentOverlay.(Grid.Row)" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.RowSpan)" Value="2" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.Column)" Value="1" />
+                                        <Setter Target="PART_ContentOverlay.(Grid.ColumnSpan)" Value="1" />
+
+                                        <Setter Target="RotateLayoutTransform.Angle" Value="-90" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="OverlayUp">
+                                    <VisualState.Setters>
+                                        <Setter Target="PART_MainContent.Visibility" Value="Visible" />
+                                        <Setter Target="PART_MainContent.Opacity" Value="0" />
+                                        <Setter Target="PART_ContentOverlay.Visibility" Value="Visible" />
+
                                         <Setter Target="PART_LayoutTransformer.(Grid.Row)" Value="1" />
                                         <Setter Target="PART_LayoutTransformer.(Grid.RowSpan)" Value="1" />
                                         <Setter Target="PART_LayoutTransformer.(Grid.Column)" Value="0" />
